infra-kustomize/base/06-service-cp-finance.yaml

apiVersion: v1
kind: Service
metadata:
  name: company-portal-backend-finance-svc
spec:
  selector:
    app: company-portal-backend-finance-label
  type: ClusterIP
  ports:
    - port: 80  # Service Port that is exposed on the Service itself. Usage: If another pod wants to reach your shopping cart, it will call http://shopping-cart-svc:80.
      targetPort: 5001 # Container port from Pod
