infra-kustomize/base/07-ingress-company-portal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: company-portal-ingress
  namespace: company-portal-ns
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - companyportal.training.com
    secretName: wildcard-example-tls
  rules:
  - host: companyportal.training.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: company-portal-frontend-svc
            port:
              number: 80
      - path: /finance-home
        pathType: Prefix
        backend:
          service:
            name: company-portal-backend-finance-svc 
            port:
              number: 80
      - path: /finance   # This captures everything after /finance/ (Its equalient to /finance/*)
        pathType: Prefix
        backend:
          service:
            name: company-portal-backend-finance-svc 
            port:
              number: 80
      - path: /hr
        pathType: Prefix
        backend:
          service:
            name: company-portal-backend-hr-svc
            port:
              number: 80
